# distributed-tracing-otel

./: .gitignore  README.md  docker-compose.yaml
envoy-proxy/: Dockerfile  envoy.yaml
envoy-proxy/kubernetes/: deployment.yaml
jaeger/kubernetes/: deployment.yaml
java-springwebflux/: Dockerfile  pom.xml
java-springwebflux/kubernetes/: deployment.yaml
java-springwebflux/src/main/java/org/example/: Controller.java  Main.java  ReactiveKafkaProducerConfig.java
java-springwebflux/src/main/resources/: application.properties
kafka/: README.md  values.yaml
otel-collector/: Dockerfile  otel-collector-config.yaml
otel-collector/kubernetes/: deployment.yaml
postgres/: README.md
python-fastapi/: Dockerfile  docker-entry-point.sh  main.py  pyproject.toml
python-fastapi/kubernetes/: deployment.yaml
quarkus-rest/: Dockerfile  pom.xml
quarkus-rest/kubernetes/: deployment.yaml
quarkus-rest/src/main/java/org/acme/: GreetingResource.java
quarkus-rest/src/main/resources/: application.properties
